--- a/charts/kubezero/templates/storage.yaml
+++ b/charts/kubezero/templates/storage.yaml
@@ -3,6 +3,8 @@
 {{- with index .Values "storage" "lvm-localpv" }}
 lvm-localpv:
   {{- toYaml . | nindent 2 }}
+  prometheus:
+    enabled: {{ $.Values.metrics.enabled }}
 {{- end }}
 
 {{- with .Values.storage.gemini }}
@@ -33,6 +35,12 @@ aws-efs-csi-driver:
       value: "/var/run/secrets/sts.amazonaws.com/serviceaccount/token"
     - name: AWS_STS_REGIONAL_ENDPOINTS
       value: regional
+  # Dynamic Provisioning
+  {{- with index .Values "storage" "aws-efs-csi-driver" "storageClasses" }}
+  storageClasses:
+  {{- toYaml . | nindent 4 }}
+  {{- end }}
+  # Legacy static provisioning
   {{- with index .Values "storage" "aws-efs-csi-driver" "PersistentVolumes" }}
   PersistentVolumes:
   {{- toYaml . | nindent 4 }}
