--- a/charts/kubezero-addons/charts/aws-node-termination-handler/Chart.yaml
+++ b/charts/kubezero-addons/charts/aws-node-termination-handler/Chart.yaml
@@ -1,25 +1,25 @@
 apiVersion: v2
-name: aws-node-termination-handler
+appVersion: 1.16.0
 description: A Helm chart for the AWS Node Termination Handler.
-type: application
-version: 0.16.0
-appVersion: 1.14.0
-kubeVersion: ">= 1.16-0"
-keywords:
-  - aws
-  - eks
-  - ec2
-  - node-termination
-  - spot
 home: https://github.com/aws/eks-charts
 icon: https://raw.githubusercontent.com/aws/eks-charts/master/docs/logo/aws.png
-sources:
-  - https://github.com/aws/aws-node-termination-handler/
-  - https://github.com/aws/eks-charts/
+keywords:
+- aws
+- eks
+- ec2
+- node-termination
+- spot
+kubeVersion: '>= 1.16-0'
 maintainers:
-  - name: Brandon Wagner
-    url: https://github.com/bwagner5
-    email: bwagner5@users.noreply.github.com
-  - name: Jillian Montalvo
-    url: https://github.com/jillmon
-    email: jillmon@users.noreply.github.com
+- email: bwagner5@users.noreply.github.com
+  name: Brandon Wagner
+  url: https://github.com/bwagner5
+- email: jillmon@users.noreply.github.com
+  name: Jillian Kuentz
+  url: https://github.com/jillmon
+name: aws-node-termination-handler
+sources:
+- https://github.com/aws/aws-node-termination-handler/
+- https://github.com/aws/eks-charts/
+type: application
+version: 0.18.0
