--- a/charts/kubezero-addons/values.yaml
+++ b/charts/kubezero-addons/values.yaml
@@ -26,8 +26,8 @@ aws-node-termination-handler:
 
   fullnameOverride: "aws-node-termination-handler"
 
-  image:
-    tag: v1.14.1
+  #image:
+  #  tag: v1.14.1
 
   # -- "aws-node-termination-handler/${ClusterName}"
   managedAsgTag: "aws-node-termination-handler/managed"
